docker-orchestration/k8s/manifests/istio/istio-destination-rule.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "istio-io-health"
spec:
  host: "*.istio-io-health.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
