docker-orchestration/k8s/manifests/istio/istio-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: config-server-virtual-service
spec:
  hosts:
  - "config.example.com"
  gateways:
  - config-server-gateway
  http:
  - match:
    - uri:
        prefix: /*
    route:
    - destination:
        port:
          number: 8888
        host: config-server-service
